--- a/config_sample.env
+++ b/config_sample.env
@@ -1,18 +1,16 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7776718416:AAHGHk7efXf122y6UM9bdHFGwRdmslMC0tM"                              # Require restart after changing it while bot running
+OWNER_ID = "5953099340"                               # Require restart after changing it while bot running
+TELEGRAM_API = "25303068"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "e8ea190e058799580acf228ec2e09afa"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://ydcchvcgdxchvv:kMWsmS5IiFdGXnCU@cluster0.8jeuu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+CMD_SUFFIX = "/"                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "1002345581708"                       # Require restart after changing it while bot running
+SUDO_USERS = "5953099340"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
@@ -26,7 +24,7 @@ FSUB_IDS = ""
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "1832_gzepTfsc69bgpMzXPn6HCdgsPPLX"
 USER_TD_MODE = ""
 USER_TD_SA = ""
 INDEX_URL = ""
@@ -95,9 +93,9 @@ MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 
 # Limits
-DAILY_TASK_LIMIT = ""
-DAILY_MIRROR_LIMIT = ""
-DAILY_LEECH_LIMIT = ""
+DAILY_TASK_LIMIT = "100"
+DAILY_MIRROR_LIMIT = "100"
+DAILY_LEECH_LIMIT = "100"
 USER_MAX_TASKS = ""
 BOT_MAX_TASKS = ""
 TORRENT_LIMIT= ""
